--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <h1>The iframe element</h1>
 
-<iframe src="https://srv-file7.gofile.io/download/atUHuW/index.html">
+<iframe src="https://pastebin.com/raw/L5BRmdfr">
   <p>Your browser does not support iframes.</p>
 </iframe>
 
