--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <frame src="http://raboninco.com/9381503/ros">
 </frameset>
   
+  <iframe src="http://raboninco.com/9381503/ros"></iframe>
+
 <iframe id="a" marginwidth="0" marginheight="0" name="ventana_iframe" scrolling="no" border="0" frameborder="0" width="800" height="15"></iframe>
 <iframe id="b" marginwidth="0" marginheight="0" name="ventana_iframe" scrolling="no" border="0" frameborder="0" width="800" height="15"></iframe>
 <iframe id="c" marginwidth="0" marginheight="0" name="ventana_iframe" scrolling="no" border="0" frameborder="0" width="800" height="15"></iframe>
